# C-Game-Engine

./: CMakeLists.txt  readme.md
TD Game/: TD Game.sln  TD Game.vcxproj  TD Game.vcxproj.filters  imgui.ini
TD Game/Debug/: TD Game.exe.recipe  TD Game.vcxproj.FileListAbsolute.txt  imgui.ini  vc143.idb
TD Game/Debug/TD Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TD Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TD Game/Debug/shaders/default/: fragment.glsl  vertex.glsl
TD Game/Debug/shaders/shadows/: vertex.glsl
TD Game/Release/: TD Game.exe.recipe  TD Game.iobj  TD Game.ipdb  TD Game.vcxproj.FileListAbsolute.txt  imgui.ini
TD Game/Release/TD Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TD Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
TD Game/src/: Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  LightMapper.cpp  LightMapper.h  Material.cpp  Material.h  Physics.cpp  Physics.h  PostProcess.cpp  PostProcess.h  Ray.cpp  Ray.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Tools.cpp  Tools.h  main.cpp
TD Game/src/Components/: Component.cpp  Component.h  Entity.cpp  Entity.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Transform.cpp  Transform.h
TD Game/src/entity/: entity.cpp  entity.h
TD Game/src/shaders/default/: fragment.glsl  vertex.glsl
TD Game/src/shaders/postprocess/: fragment.glsl  vertex.glsl
TD Game/x64/Debug/: TD Game.exe.recipe  TD Game.ilk  TD Game.vcxproj.FileListAbsolute.txt  vc143.idb
TD Game/x64/Debug/TD Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TD Game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
